--- a/panel_acordeon.css
+++ b/panel_acordeon.css
@@ -13,6 +13,13 @@
     margin-bottom: 20px;
     overflow-x: auto;
     padding-bottom: 10px;
+    scrollbar-width: none; /* Para Firefox */
+    -ms-overflow-style: none; /* Para Internet Explorer y Edge */
+}
+
+/* Ocultar la barra de scroll para Chrome, Safari y Opera */
+.accordion-filters::-webkit-scrollbar {
+    display: none;
 }
 
 .filter-button {
