--- a/my-app/components/layout/Sidebar.css
+++ b/my-app/components/layout/Sidebar.css
@@ -74,6 +74,7 @@
   transition: var(--transition-slow);
 }
 
+.sidebar:hover,
 .sidebar.open {
   width: 250px;
 }
@@ -91,6 +92,7 @@
   transition: var(--transition-medium);
 }
 
+.sidebar:hover .logo-details .icon,
 .sidebar.open .logo-details .icon {
   opacity: 1;
 }
@@ -104,6 +106,7 @@
   margin-left: 10px;
 }
 
+.sidebar:hover .logo_name,
 .sidebar.open .logo_name {
   opacity: 1;
 }
@@ -120,6 +123,7 @@
   color: var(--color-text-primary);
 }
 
+.sidebar:hover .logo-details #btn,
 .sidebar.open .logo-details #btn {
   text-align: right;
 }
@@ -171,6 +175,7 @@
   transform: translateY(-50%);
 }
 
+.sidebar:hover li .tooltip,
 .sidebar.open li .tooltip {
   display: none;
 }
@@ -200,6 +205,7 @@
   transition: var(--transition-medium);
 }
 
+.sidebar:hover li a .links_name,
 .sidebar.open li a .links_name {
   opacity: 1;
   pointer-events: auto;
@@ -230,6 +236,7 @@
   overflow: hidden;
 }
 
+.sidebar:hover li.profile,
 .sidebar.open li.profile {
   width: 250px;
 }
