--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -135,7 +135,7 @@
 }
 
 .sidebar li a:hover {
-  background: var(--color-text-primary);
+  background: var(--color-secondary);
 }
 
 .sidebar li a .links_name {
@@ -229,7 +229,7 @@
 }
 
 .sidebar li a.active {
-  background: var(--color-text-primary);
+  background: var(--color-secondary);
 }
 
 .sidebar li a.active .links_name,
